authentication and session done.

--- a/app/src/main/res/navigation/navigation_host.xml
+++ b/app/src/main/res/navigation/navigation_host.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.ecommerce.HomeFragment"
+        android:name="com.example.ecommerce.ui.home_product_item.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
 </navigation>
