--- a/app/src/main/res/navigation/navigation_host.xml
+++ b/app/src/main/res/navigation/navigation_host.xml
@@ -10,5 +10,14 @@
         android:id="@+id/homeFragment"
         android:name="com.example.ecommerce.ui.home_product_item.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_productDetails"
+            app:destination="@id/productDetails" />
+    </fragment>
+    <fragment
+        android:id="@+id/productDetails"
+        android:name="com.example.ecommerce.ui.home_product_item.db.ProductDetailsFragment"
+        android:label="fragment_product_details"
+        tools:layout="@layout/fragment_product_details" />
 </navigation>
