--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -88,14 +88,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/saveamount" />
 
             <Button
+
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:backgroundTint="#252525"
                 android:text="Buy Now"
-                android:backgroundTint="#716E6E"
-                app:layout_constraintTop_toBottomOf="@+id/discountedPrice"
-                android:layout_marginTop="4dp"/>
-
+                app:layout_constraintTop_toBottomOf="@+id/discountedPrice" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
