--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -11,21 +11,24 @@
 
     </data>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/firstlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#EAE9E9">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/firstcard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="4dp"
             app:cardBackgroundColor="@color/white"
+            app:cardElevation="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:cardElevation="20dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -69,7 +72,7 @@
                     android:layout_marginTop="56dp"
                     android:text="@{String.valueOf(data.discount)}"
                     app:layout_constraintStart_toEndOf="@+id/productImage"
-                   app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/price"
@@ -118,5 +121,8 @@
 
 
         </com.google.android.material.card.MaterialCardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
