--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,8 @@
         <item name="android:statusBarColor">#FF3D00</item>
     </style>
 
-    <style name="Theme.Ecommerce" parent="Base.Theme.Ecommerce" />
+    <style name="Theme.Ecommerce" parent="Base.Theme.Ecommerce" >
+        <item name="android:statusBarColor">#FF3D00</item>
+    </style>
+
 </resources>
