--- a/app/src/main/res/navigation/navigation_host.xml
+++ b/app/src/main/res/navigation/navigation_host.xml
@@ -40,4 +40,14 @@
         android:name="com.example.ecommerce.ui.payment.CardPaymentFragment"
         android:label="fragment_card_payment"
         tools:layout="@layout/fragment_card_payment" />
+    <fragment
+        android:id="@+id/userAccount"
+        android:name="com.example.ecommerce.ui.user_account.UserAccountFragment"
+        android:label="fragment_user_account"
+        tools:layout="@layout/fragment_user_account" />
+    <fragment
+        android:id="@+id/orderHistoryFragment2"
+        android:name="com.example.ecommerce.ui.order_history.OrderHistoryFragment"
+        android:label="fragment_order_history"
+        tools:layout="@layout/fragment_order_history" />
 </navigation>
