--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -37,7 +37,7 @@
                 <ImageView
                     android:id="@+id/productImage"
                     android:layout_width="120dp"
-                    android:layout_height="100dp"
+                    android:layout_height="120dp"
                     android:layout_margin="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="56dp"
+                    android:text="discounted price"
 
                     app:layout_constraintStart_toEndOf="@+id/productImage"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -80,18 +81,30 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="4dp"
+                    android:text="price"
 
                     app:layout_constraintStart_toEndOf="@+id/productImage"
                     app:layout_constraintTop_toBottomOf="@+id/discountPrice" />
+
+                <TextView
+                    android:id="@+id/total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:text="total"
+                    app:layout_constraintStart_toEndOf="@+id/productImage"
+                    app:layout_constraintTop_toBottomOf="@+id/price" />
 
                 <ImageView
                     android:id="@+id/minus"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginEnd="80dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/price"
+                    app:layout_constraintBottom_toBottomOf="@+id/total"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/price"
+                    app:layout_constraintTop_toTopOf="@+id/total"
                     app:srcCompat="@drawable/ic_minus" />
 
                 <ImageView
@@ -109,7 +122,7 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:background="#EAE9E9"
-                    android:text="0"
+                    android:text="1"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="@+id/minus"
                     app:layout_constraintEnd_toStartOf="@+id/plus"
