--- a/app/src/main/res/layout/fragment_user_account.xml
+++ b/app/src/main/res/layout/fragment_user_account.xml
@@ -73,28 +73,28 @@
         android:background="#FF3D00"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="4dp"
+
         android:weightSum="1"
         app:layout_constraintTop_toBottomOf="@id/accountProfile">
 
-        <TextView
-            android:id="@+id/wishlistPage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:text="Wishlist"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/wishlistPage"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight=".5"-->
+<!--            android:text="Wishlist"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textSize="16sp" />-->
 
-        <TextView
-            android:id="@+id/orderHistoryPage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_weight=".5"
-            android:text="Order History"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/orderHistoryPage"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="4dp"-->
+<!--            android:layout_weight=".5"-->
+<!--            android:text="Order History"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textSize="16sp" />-->
 
     </LinearLayout>
 
@@ -106,13 +106,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wishListAndOrderHistoryLayout">
 
-        <fragment
-            android:id="@+id/fragment_container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/wishlist_order_navigation" />
+            android:layout_height="wrap_content"
+            android:background="#FF3D00"
+            app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicatorGravity="stretch"
+            app:tabIndicator="@drawable/tab_indicator"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="#C8DC16"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="#FF3D00"
+            app:tabTextColor="#545553" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+<!--        <fragment-->
+<!--            android:id="@+id/fragment_container"-->
+<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:defaultNavHost="true"-->
+<!--            app:navGraph="@navigation/wishlist_order_navigation" />-->
 
     </LinearLayout>
 
