--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -48,8 +48,8 @@
 
             <ImageView
                 android:id="@+id/wishlist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 app:srcCompat = "@drawable/ic_favourite"
                 app:layout_constraintStart_toEndOf="@+id/productName"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,8 @@
 
             <TextView
                 android:id="@+id/productName"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
+                android:ellipsize="marquee"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:maxLines="1"
