--- a/app/src/main/res/navigation/navigation_host.xml
+++ b/app/src/main/res/navigation/navigation_host.xml
@@ -45,9 +45,10 @@
         android:name="com.example.ecommerce.ui.user_account.UserAccountFragment"
         android:label="fragment_user_account"
         tools:layout="@layout/fragment_user_account" />
-    <fragment
-        android:id="@+id/orderHistoryFragment2"
-        android:name="com.example.ecommerce.ui.order_history.OrderHistoryFragment"
-        android:label="fragment_order_history"
-        tools:layout="@layout/fragment_order_history" />
+
+    <activity
+        android:id="@+id/loginActivity"
+        android:name="com.example.ecommerce.ui.login.LoginActivity"
+        android:label="LoginActivity"
+        tools:layout="@layout/activity_login"/>
 </navigation>
