--- a/app/src/main/res/navigation/wishlist_order_navigation.xml
+++ b/app/src/main/res/navigation/wishlist_order_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/wishListFragment"
         android:name="com.example.ecommerce.ui.wishlist.WishListFragment"
         android:label="fragment_wish_list"
-        tools:layout="@layout/fragment_wish_list" />
+        tools:layout="@layout/fragment_wish_list" >
+        <action
+            android:id="@+id/action_wishListFragment_to_orderHistoryFragment"
+            app:destination="@id/orderHistoryFragment" />
+    </fragment>
     <fragment
         android:id="@+id/orderHistoryFragment"
         android:name="com.example.ecommerce.ui.order_history.OrderHistoryFragment"
