--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,17 @@
         android:textColor="@color/appColor"
         android:textSize="32sp"
         android:textStyle="bold"
+        android:layout_marginHorizontal="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/apptitle"
-        app:layout_constraintStart_toStartOf="@id/apptitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.20" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/UserName"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="User name"
         app:layout_constraintEnd_toEndOf="@+id/apptitle"
@@ -45,7 +46,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Password"
         app:endIconMode="password_toggle"
@@ -120,7 +121,7 @@
     <Button
         android:id="@+id/login"
         style="@style/Widget.Material3.Button"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="12dp"
         android:text="LOGIN"
